--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,4 +19,12 @@
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true" />
 
+    <Button
+        android:id="@+id/wrd_mgmt_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Wardobe"
+        android:layout_below="@id/camera_button"
+        android:layout_centerHorizontal="true"/>
+
 </RelativeLayout>
