--- a/app/src/main/res/layout/activity_random_wardrobe.xml
+++ b/app/src/main/res/layout/activity_random_wardrobe.xml
@@ -12,11 +12,10 @@
 
 
     <TextView
-        android:text="TextView"
+        android:text="Generated Result"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/textView"
-        tools:text="Generated Result"
         android:textSize="24sp"
         android:layout_marginBottom="11dp"
         android:layout_above="@+id/generated_results"
@@ -49,26 +48,19 @@
         android:layout_above="@+id/generate_button"
         android:layout_alignParentStart="true">
         <ImageView
-            android:layout_width="230dp"
+            android:layout_width="120dp"
             android:layout_height="230dp"
             android:id="@+id/top_view"/>
-
-        <LinearLayout
-            android:layout_width="115dp"
+        <ImageView
+            android:layout_width="120dp"
             android:layout_height="230dp"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentEnd="true"
-            android:orientation="vertical">
-            <ImageView
-                android:layout_width="115dp"
-                android:layout_height="115dp"
-                android:id="@+id/bottom_view"/>
+            android:id="@+id/bottom_view"/>
 
-            <ImageView
-                android:layout_width="115dp"
-                android:layout_height="115dp"
-                android:id="@+id/shoes_view"/>
-        </LinearLayout>
+        <ImageView
+            android:layout_width="120dp"
+            android:layout_height="230dp"
+            android:id="@+id/shoes_view"
+            />
     </LinearLayout>
 
 </RelativeLayout>
