--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,4 +28,13 @@
         android:layout_centerHorizontal="true"
         android:layout_below="@id/camera_button"/>
 
+    <Button
+        android:id="@+id/wardrobe_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Wardrobe"
+        android:layout_marginTop="14dp"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@id/location_button"/>
+
 </RelativeLayout>
