--- a/app/src/main/res/layout/wardrobe_item.xml
+++ b/app/src/main/res/layout/wardrobe_item.xml
@@ -9,7 +9,7 @@
         android:layout_height="100dp" />
 
     <TextView
-        android:id="@+id/text"
+        android:id="@+id/imageTitle"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
