--- a/app/src/main/res/layout/activity_random_wardrobe.xml
+++ b/app/src/main/res/layout/activity_random_wardrobe.xml
@@ -28,20 +28,23 @@
         android:layout_alignParentStart="true">
 
         <ImageView
-            android:layout_width="120dp"
+            android:layout_width="0dp"
             android:layout_height="230dp"
+            android:layout_weight="1"
             android:id="@+id/top_view"
             android:background="#000000"/>
 
         <ImageView
-            android:layout_width="120dp"
+            android:layout_width="0dp"
             android:layout_height="230dp"
+            android:layout_weight="1"
             android:id="@+id/bottom_view"
             android:background="#000000"/>
 
         <ImageView
-            android:layout_width="120dp"
+            android:layout_width="0dp"
             android:layout_height="230dp"
+            android:layout_weight="1"
             android:id="@+id/shoes_view"
             android:background="#000000"
             />
