--- a/app/src/main/res/layout/activity_random_wardrobe.xml
+++ b/app/src/main/res/layout/activity_random_wardrobe.xml
@@ -4,71 +4,75 @@
     android:id="@+id/activity_random_wardrobe"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    android:background="@drawable/suitbg2"
     tools:context="edu.csulb.suitup.RandomWardrobeActivity">
 
-
     <TextView
-        android:text="TextView"
+        android:text="Suit Up Buttercup"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/textView"
-        tools:text="Generated Result"
+        android:id="@+id/suit_up_text"
         android:textSize="24sp"
-        android:layout_marginBottom="11dp"
-        android:layout_above="@+id/generated_results"
-        android:paddingBottom="10dp"
-        android:layout_centerHorizontal="true" />
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/exclude_button"
-        android:text="Remove this combination"
-        android:layout_marginBottom="35dp"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true" />
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/generate_button"
-        android:text="Go Again"
-        android:layout_marginBottom="13dp"
-        android:layout_above="@+id/exclude_button"
-        android:layout_centerHorizontal="true" />
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="20dp"
+        android:textColor="#ffffff"/>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="230dp"
-        android:layout_marginBottom="34dp"
+        android:layout_marginBottom="20dp"
+        android:layout_marginTop="20dp"
         android:id="@+id/generated_results"
-        android:layout_above="@+id/generate_button"
+        android:layout_below="@+id/suit_up_text"
         android:layout_alignParentStart="true">
+
         <ImageView
-            android:layout_width="230dp"
+            android:layout_width="0dp"
             android:layout_height="230dp"
-            android:id="@+id/top_view"/>
+            android:layout_weight="1"
+            android:id="@+id/top_view"
+            android:background="#000000"/>
 
-        <LinearLayout
-            android:layout_width="115dp"
+        <ImageView
+            android:layout_width="0dp"
             android:layout_height="230dp"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentEnd="true"
-            android:orientation="vertical">
-            <ImageView
-                android:layout_width="115dp"
-                android:layout_height="115dp"
-                android:id="@+id/bottom_view"/>
+            android:layout_weight="1"
+            android:id="@+id/bottom_view"
+            android:background="#000000"/>
 
-            <ImageView
-                android:layout_width="115dp"
-                android:layout_height="115dp"
-                android:id="@+id/shoes_view"/>
-        </LinearLayout>
+        <ImageView
+            android:layout_width="0dp"
+            android:layout_height="230dp"
+            android:layout_weight="1"
+            android:id="@+id/shoes_view"
+            android:background="#000000"
+            />
     </LinearLayout>
+
+    <Button
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/generate_button"
+        android:text="Go Again"
+        android:layout_marginBottom="10dp"
+        android:layout_below="@+id/generated_results"
+        android:layout_centerHorizontal="true"
+        android:background="@drawable/gradient"
+        android:textColor="#595959"/>
+
+    <Button
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/exclude_button"
+        android:text="Remove this combination"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@+id/generate_button"
+        android:background="@drawable/gradient"
+        android:textColor="#595959"/>
+
+
+
+
 
 </RelativeLayout>
