--- a/app/src/main/res/layout/activity_item_detail.xml
+++ b/app/src/main/res/layout/activity_item_detail.xml
@@ -1,52 +1,67 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent" android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="#000">
 
-    <LinearLayout
-        android:id="@+id/imageViewLayout"
+
+    <ImageView
+        android:id="@+id/image"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
-        <ImageView
-            android:id="@+id/image"
-            android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="3"
+        android:layout_gravity="center"
+        android:scaleType="fitCenter"/>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <TextView
+            android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:layout_gravity="center"
-            android:layout_centerHorizontal="true"
-            android:scaleType="fitStart"/>
+            android:text="Description: "
+            android:paddingStart="40dp"
+            android:textSize="18sp"
+            android:textColor="#ffffff"
+            android:gravity="center_vertical"/>
+        <TextView
+            android:id="@+id/title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="#00000c"
+            android:padding="10dp"
+            android:textColor="#fff"
+            android:textSize="18sp" />
     </LinearLayout>
 
-
-    <TextView
-        android:id="@+id/title"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="#00000c"
-        android:padding="10dp"
-        android:textColor="#fff"
-        android:textSize="20dp"
-        android:layout_above="@+id/tags"/>
-
-    <TextView
-        android:id="@+id/tags"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom"
-        android:background="#00000c"
-        android:padding="10dp"
-        android:textColor="#fff"
-        android:textSize="20dp"
-        android:layout_above="@+id/itemDetailBtnLayout"/>
+        android:layout_height="wrap_content">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:text="Tags: "
+            android:paddingStart="40dp"
+            android:textSize="18sp"
+            android:textColor="#ffffff"
+            android:gravity="center_vertical"/>
+        <TextView
+            android:id="@+id/tags"
+            android:layout_width="wrap_content"
+            android:layout_height="fill_parent"
+            android:background="#00000c"
+            android:padding="10dp"
+            android:textColor="#fff"
+            android:textSize="18sp"
+            android:text="Tag1, Tag2"/>
+    </LinearLayout>
 
     <LinearLayout
         android:id="@+id/itemDetailBtnLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:gravity="center"
-        android:layout_alignParentBottom="true">
+        android:gravity="center">
 
         <Button
             android:id="@+id/edit_record_btn"
@@ -58,9 +73,8 @@
             android:id="@+id/delete_record_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
             android:text="Delete" />
 
     </LinearLayout>
 
-</RelativeLayout>
+</LinearLayout>
