--- a/app/src/main/res/layout/activity_item_detail.xml
+++ b/app/src/main/res/layout/activity_item_detail.xml
@@ -21,6 +21,7 @@
             android:layout_height="match_parent"
             android:text="Description: "
             android:paddingStart="40dp"
+            android:paddingEnd="40dp"
             android:textSize="18sp"
             android:textColor="#ffffff"
             android:gravity="center_vertical"/>
@@ -42,6 +43,7 @@
             android:layout_height="match_parent"
             android:text="Tags: "
             android:paddingStart="40dp"
+            android:paddingEnd="40dp"
             android:textSize="18sp"
             android:textColor="#ffffff"
             android:gravity="center_vertical"/>
@@ -52,8 +54,7 @@
             android:background="#00000c"
             android:padding="10dp"
             android:textColor="#fff"
-            android:textSize="18sp"
-            android:text="Tag1, Tag2"/>
+            android:textSize="18sp" />
     </LinearLayout>
 
     <LinearLayout
